<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.skyinit.pomodorotimer.ui.home.HomeFragment"
        android:label="@string/nav_title_home" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.skyinit.pomodorotimer.ui.statistics.StatisticsFragment"
        android:label="@string/nav_title_statistics" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.skyinit.pomodorotimer.ui.calendar.CalendarFragment"
        android:label="@string/nav_title_calendar" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.skyinit.pomodorotimer.ui.profile.ProfileFragment"
        android:label="@string/nav_title_profile" />

    <fragment
        android:id="@+id/nav_session_detail"
        android:name="com.skyinit.pomodorotimer.ui.calendar.SessionDetailFragment"
        android:label="@string/title_session_detail">
        <argument
            android:name="sessionId"
            app:argType="integer" />
    </fragment>
</navigation>